@@ -15,3 +15,5 @@ Changes since release 0.3.9:
 
 - Multi-path generator now takes a generic stochastic process
 
+- Multi-asset option now takes a generic stochastic process
+
